load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common_headers",
    hdrs = [
        "unicode/uidna.h",
        "unicode/errorcode.h",
        "unicode/ucat.h",
        "unicode/localematcher.h",
        "unicode/parsepos.h",
        "unicode/unifunct.h",
        "unicode/umachine.h",
        "unicode/stringoptions.h",
        "unicode/ucnv_cb.h",
        "unicode/brkiter.h",
        "unicode/bytestriebuilder.h",
        "unicode/urename.h",
        "unicode/uchriter.h",
        "unicode/ucnvsel.h",
        "unicode/ucnv.h",
        "unicode/stringtriebuilder.h",
        "unicode/urep.h",
        "unicode/uscript.h",
        "unicode/ubiditransform.h",
        "unicode/symtable.h",
        "unicode/usetiter.h",
        "unicode/uchar.h",
        "unicode/icuplug.h",
        "unicode/udisplaycontext.h",
        "unicode/usprep.h",
        "unicode/unistr.h",
        "unicode/strenum.h",
        "unicode/uiter.h",
        "unicode/ubrk.h",
        "unicode/unorm.h",
        "unicode/ucurr.h",
        "unicode/rbbi.h",
        "unicode/dbbi.h",
        "unicode/uconfig.h",
        "unicode/icudataver.h",
        "unicode/stringpiece.h",
        "unicode/uldnames.h",
        "unicode/umutablecptrie.h",
        "unicode/putil.h",
        "unicode/udata.h",
        "unicode/schriter.h",
        "unicode/uset.h",
        "unicode/bytestream.h",
        "unicode/ubidi.h",
        "unicode/ustringtrie.h",
        "unicode/ushape.h",
        "unicode/uloc.h",
        "unicode/std_string.h",
        "unicode/messagepattern.h",
        "unicode/utf32.h",
        "unicode/utf.h",
        "unicode/uobject.h",
        "unicode/utext.h",
        "unicode/locdspnm.h",
        "unicode/appendable.h",
        "unicode/uenum.h",
        "unicode/ucharstriebuilder.h",
        "unicode/ucasemap.h",
        "unicode/localpointer.h",
        "unicode/resbund.h",
        "unicode/ucnv_err.h",
        "unicode/localebuilder.h",
        "unicode/utf8.h",
        "unicode/utf16.h",
        "unicode/ptypes.h",
        "unicode/uniset.h",
        "unicode/ucptrie.h",
        "unicode/dtintrv.h",
        "unicode/enumset.h",
        "unicode/platform.h",
        "unicode/utypes.h",
        "unicode/casemap.h",
        "unicode/ulocbuilder.h",
        "unicode/char16ptr.h",
        "unicode/utf_old.h",
        "unicode/normalizer2.h",
        "unicode/ucpmap.h",
        "unicode/ustring.h",
        "unicode/simpleformatter.h",
        "unicode/parseerr.h",
        "unicode/utrace.h",
        "unicode/rep.h",
        "unicode/locid.h",
        "unicode/unorm2.h",
        "unicode/ucharstrie.h",
        "unicode/uvernum.h",
        "unicode/uclean.h",
        "unicode/uversion.h",
        "unicode/unimatch.h",
        "unicode/umisc.h",
        "unicode/normlzr.h",
        "unicode/unifilt.h",
        "unicode/edits.h",
        "unicode/filteredbrk.h",
        "unicode/caniter.h",
        "unicode/chariter.h",
        "unicode/utfiterator.h",
        "unicode/ulocale.h",
        "unicode/ures.h",
        "unicode/idna.h",
        "unicode/utfstring.h",
        "unicode/bytestrie.h",
        "unicode/docmain.h",
        "cpputils.h",
        "locdistance.h",
        "uarrsort.h",
        "lsr.h",
        "fixedstring.h",
        "servnotf.h",
        "rbbinode.h",
        "unormimp.h",
        "uinvchar.h",
        "serv.h",
        "rbbisetb.h",
        "wintz.h",
        "ubrkimpl.h",
        "uniquecharstr.h",
        "emojiprops.h",
        "cstr.h",
        "sprpimpl.h",
        "cwchar.h",
        "dictbe.h",
        "unifiedcache.h",
        "locutil.h",
        "dictionarydata.h",
        "utypeinfo.h",
        "ustr_cnv.h",
        "unisetspan.h",
        "rbbirpt.h",
        "uvectr32.h",
        "ucurrimp.h",
        "ucase.h",
        "uposixdefs.h",
        "capi_helper.h",
        "ustr_imp.h",
        "utracimp.h",
        "uset_imp.h",
        "norm2_nfc_data.h",
        "uenumimp.h",
        "uvectr64.h",
        "utrie2_impl.h",
        "resource.h",
        "udataswp.h",
        "usc_impl.h",
        "uprops.h",
        "static_unicode_sets.h",
        "cstring.h",
        "locmap.h",
        "mutex.h",
        "ucnv_cnv.h",
        "utrie.h",
        "uchar_props_data.h",
        "norm2allmodes.h",
        "uresimp.h",
        "ubidi_props_data.h",
        "ucln_imp.h",
        "ubidi_props.h",
        "util.h",
        "rbbi_cache.h",
        "uassert.h",
        "umapfile.h",
        "ulayout_props.h",
        "localsvc.h",
        "hash.h",
        "ulist.h",
        "umutex.h",
        "restrace.h",
        "ucasemap_imp.h",
        "ulocimp.h",
        "ucptrie_impl.h",
        "putilimp.h",
        "icuplugimp.h",
        "ucmndata.h",
        "udatamem.h",
        "rbbitblb.h",
        "rbbidata.h",
        "lstmbe.h",
        "uhash.h",
        "ucase_props_data.h",
        "ubidiimp.h",
        "sharedobject.h",
        "charstrmap.h",
        "ucnv_io.h",
        "ucol_data.h",
        "ucnv_bld.h",
        "ucln_cmn.h",
        "brkeng.h",
        "ureslocs.h",
        "unistrappender.h",
        "uelement.h",
        "charstr.h",
        "cmemory.h",
        "punycode.h",
        "ustrfmt.h",
        "servloc.h",
        "ucln.h",
        "locbased.h",
        "rbbiscan.h",
        "pluralmap.h",
        "mlbe.h",
        "propsvec.h",
        "ucnv_ext.h",
        "msvcres.h",
        "localeprioritylist.h",
        "normalizer2impl.h",
        "ruleiter.h",
        "localefallback_data.h",
        "bmpset.h",
        "ucnvmbcs.h",
        "rbbirb.h",
        "ucnv_imp.h",
        "patternprops.h",
        "loclikelysubtags.h",
        "utrie2.h",
        "messageimpl.h",
        "propname_data.h",
        "propname.h",
        "ucol_swp.h",
        "bytesinkutil.h",
        "uvector.h",
        "uresdata.h",
        "ustrenum.h"
    ],
    copts = [
        "-Iicu4c/source/common",
    ],
)

cc_library(
    name = "common",
    srcs = [
        "appendable.cpp",
        "bmpset.cpp",
        "brkeng.cpp",
        "brkiter.cpp",
        "bytesinkutil.cpp",
        "bytestream.cpp",
        "bytestrie.cpp",
        "bytestriebuilder.cpp",
        "bytestrieiterator.cpp",
        "caniter.cpp",
        "characterproperties.cpp",
        "chariter.cpp",
        "charstr.cpp",
        "cmemory.cpp",
        "cstr.cpp",
        "cstring.cpp",
        "cwchar.cpp",
        "dictbe.cpp",
        "dictionarydata.cpp",
        "dtintrv.cpp",
        "edits.cpp",
        "emojiprops.cpp",
        "errorcode.cpp",
        "filteredbrk.cpp",
        "filterednormalizer2.cpp",
        "fixedstring.cpp",
        "icudataver.cpp",
        "icuplug.cpp",
        "loadednormalizer2impl.cpp",
        "localebuilder.cpp",
        "localematcher.cpp",
        "localeprioritylist.cpp",
        "locavailable.cpp",
        "locbased.cpp",
        "locdispnames.cpp",
        "locdistance.cpp",
        "locdspnm.cpp",
        "locid.cpp",
        "loclikely.cpp",
        "loclikelysubtags.cpp",
        "locmap.cpp",
        "locresdata.cpp",
        "locutil.cpp",
        "lsr.cpp",
        "lstmbe.cpp",
        "messagepattern.cpp",
        "mlbe.cpp",
        "normalizer2.cpp",
        "normalizer2impl.cpp",
        "normlzr.cpp",
        "parsepos.cpp",
        "patternprops.cpp",
        "pluralmap.cpp",
        "propname.cpp",
        "propsvec.cpp",
        "punycode.cpp",
        "putil.cpp",
        "rbbi.cpp",
        "rbbi_cache.cpp",
        "rbbidata.cpp",
        "rbbinode.cpp",
        "rbbirb.cpp",
        "rbbiscan.cpp",
        "rbbisetb.cpp",
        "rbbistbl.cpp",
        "rbbitblb.cpp",
        "resbund.cpp",
        "resbund_cnv.cpp",
        "resource.cpp",
        "restrace.cpp",
        "ruleiter.cpp",
        "schriter.cpp",
        "serv.cpp",
        "servlk.cpp",
        "servlkf.cpp",
        "servls.cpp",
        "servnotf.cpp",
        "servrbf.cpp",
        "servslkf.cpp",
        "sharedobject.cpp",
        "simpleformatter.cpp",
        "static_unicode_sets.cpp",
        "stringpiece.cpp",
        "stringtriebuilder.cpp",
        "uarrsort.cpp",
        "ubidi.cpp",
        "ubidi_props.cpp",
        "ubidiln.cpp",
        "ubiditransform.cpp",
        "ubidiwrt.cpp",
        "ubrk.cpp",
        "ucase.cpp",
        "ucasemap.cpp",
        "ucasemap_titlecase_brkiter.cpp",
        "ucat.cpp",
        "uchar.cpp",
        "ucharstrie.cpp",
        "ucharstriebuilder.cpp",
        "ucharstrieiterator.cpp",
        "uchriter.cpp",
        "ucln_cmn.cpp",
        "ucmndata.cpp",
        "ucnv.cpp",
        "ucnv2022.cpp",
        "ucnv_bld.cpp",
        "ucnv_cb.cpp",
        "ucnv_cnv.cpp",
        "ucnv_ct.cpp",
        "ucnv_err.cpp",
        "ucnv_ext.cpp",
        "ucnv_io.cpp",
        "ucnv_lmb.cpp",
        "ucnv_set.cpp",
        "ucnv_u16.cpp",
        "ucnv_u32.cpp",
        "ucnv_u7.cpp",
        "ucnv_u8.cpp",
        "ucnvbocu.cpp",
        "ucnvdisp.cpp",
        "ucnvhz.cpp",
        "ucnvisci.cpp",
        "ucnvlat1.cpp",
        "ucnvmbcs.cpp",
        "ucnvscsu.cpp",
        "ucnvsel.cpp",
        "ucol_swp.cpp",
        "ucptrie.cpp",
        "ucurr.cpp",
        "udata.cpp",
        "udatamem.cpp",
        "udataswp.cpp",
        "uenum.cpp",
        "uhash.cpp",
        "uhash_us.cpp",
        "uidna.cpp",
        "uinit.cpp",
        "uinvchar.cpp",
        "uiter.cpp",
        "ulist.cpp",
        "uloc.cpp",
        "uloc_keytype.cpp",
        "uloc_tag.cpp",
        "ulocale.cpp",
        "ulocbuilder.cpp",
        "umapfile.cpp",
        "umath.cpp",
        "umutablecptrie.cpp",
        "umutex.cpp",
        "unames.cpp",
        "unifiedcache.cpp",
        "unifilt.cpp",
        "unifunct.cpp",
        "uniset.cpp",
        "uniset_closure.cpp",
        "uniset_props.cpp",
        "unisetspan.cpp",
        "unistr.cpp",
        "unistr_case.cpp",
        "unistr_case_locale.cpp",
        "unistr_cnv.cpp",
        "unistr_props.cpp",
        "unistr_titlecase_brkiter.cpp",
        "unorm.cpp",
        "unormcmp.cpp",
        "uobject.cpp",
        "uprops.cpp",
        "ures_cnv.cpp",
        "uresbund.cpp",
        "uresdata.cpp",
        "usc_impl.cpp",
        "uscript.cpp",
        "uscript_props.cpp",
        "uset.cpp",
        "uset_props.cpp",
        "usetiter.cpp",
        "ushape.cpp",
        "usprep.cpp",
        "ustack.cpp",
        "ustr_cnv.cpp",
        "ustr_titlecase_brkiter.cpp",
        "ustr_wcs.cpp",
        "ustrcase.cpp",
        "ustrcase_locale.cpp",
        "ustrenum.cpp",
        "ustrfmt.cpp",
        "ustring.cpp",
        "ustrtrns.cpp",
        "utext.cpp",
        "utf_impl.cpp",
        "util.cpp",
        "util_props.cpp",
        "utrace.cpp",
        "utrie.cpp",
        "utrie2.cpp",
        "utrie2_builder.cpp",
        "utrie_swap.cpp",
        "uts46.cpp",
        "utypes.cpp",
        "uvector.cpp",
        "uvectr32.cpp",
        "uvectr64.cpp",
        "wintz.cpp"
    ],
    hdrs = [
        "unicode/uidna.h",
        "unicode/errorcode.h",
        "unicode/ucat.h",
        "unicode/localematcher.h",
        "unicode/parsepos.h",
        "unicode/unifunct.h",
        "unicode/umachine.h",
        "unicode/stringoptions.h",
        "unicode/ucnv_cb.h",
        "unicode/brkiter.h",
        "unicode/bytestriebuilder.h",
        "unicode/urename.h",
        "unicode/uchriter.h",
        "unicode/ucnvsel.h",
        "unicode/ucnv.h",
        "unicode/stringtriebuilder.h",
        "unicode/urep.h",
        "unicode/uscript.h",
        "unicode/ubiditransform.h",
        "unicode/symtable.h",
        "unicode/usetiter.h",
        "unicode/uchar.h",
        "unicode/icuplug.h",
        "unicode/udisplaycontext.h",
        "unicode/usprep.h",
        "unicode/unistr.h",
        "unicode/strenum.h",
        "unicode/uiter.h",
        "unicode/ubrk.h",
        "unicode/unorm.h",
        "unicode/ucurr.h",
        "unicode/rbbi.h",
        "unicode/dbbi.h",
        "unicode/uconfig.h",
        "unicode/icudataver.h",
        "unicode/stringpiece.h",
        "unicode/uldnames.h",
        "unicode/umutablecptrie.h",
        "unicode/putil.h",
        "unicode/udata.h",
        "unicode/schriter.h",
        "unicode/uset.h",
        "unicode/bytestream.h",
        "unicode/ubidi.h",
        "unicode/ustringtrie.h",
        "unicode/ushape.h",
        "unicode/uloc.h",
        "unicode/std_string.h",
        "unicode/messagepattern.h",
        "unicode/utf32.h",
        "unicode/utf.h",
        "unicode/uobject.h",
        "unicode/utext.h",
        "unicode/locdspnm.h",
        "unicode/appendable.h",
        "unicode/uenum.h",
        "unicode/ucharstriebuilder.h",
        "unicode/ucasemap.h",
        "unicode/localpointer.h",
        "unicode/resbund.h",
        "unicode/ucnv_err.h",
        "unicode/localebuilder.h",
        "unicode/utf8.h",
        "unicode/utf16.h",
        "unicode/ptypes.h",
        "unicode/uniset.h",
        "unicode/ucptrie.h",
        "unicode/dtintrv.h",
        "unicode/enumset.h",
        "unicode/platform.h",
        "unicode/utypes.h",
        "unicode/casemap.h",
        "unicode/ulocbuilder.h",
        "unicode/char16ptr.h",
        "unicode/utf_old.h",
        "unicode/normalizer2.h",
        "unicode/ucpmap.h",
        "unicode/ustring.h",
        "unicode/simpleformatter.h",
        "unicode/parseerr.h",
        "unicode/utrace.h",
        "unicode/rep.h",
        "unicode/locid.h",
        "unicode/unorm2.h",
        "unicode/ucharstrie.h",
        "unicode/uvernum.h",
        "unicode/uclean.h",
        "unicode/uversion.h",
        "unicode/unimatch.h",
        "unicode/umisc.h",
        "unicode/normlzr.h",
        "unicode/unifilt.h",
        "unicode/edits.h",
        "unicode/filteredbrk.h",
        "unicode/caniter.h",
        "unicode/chariter.h",
        "unicode/utfiterator.h",
        "unicode/ulocale.h",
        "unicode/ures.h",
        "unicode/idna.h",
        "unicode/utfstring.h",
        "unicode/bytestrie.h",
        "unicode/docmain.h",
        "cpputils.h",
        "locdistance.h",
        "uarrsort.h",
        "lsr.h",
        "fixedstring.h",
        "servnotf.h",
        "rbbinode.h",
        "unormimp.h",
        "uinvchar.h",
        "serv.h",
        "rbbisetb.h",
        "wintz.h",
        "ubrkimpl.h",
        "uniquecharstr.h",
        "emojiprops.h",
        "cstr.h",
        "sprpimpl.h",
        "cwchar.h",
        "dictbe.h",
        "unifiedcache.h",
        "locutil.h",
        "dictionarydata.h",
        "utypeinfo.h",
        "ustr_cnv.h",
        "unisetspan.h",
        "rbbirpt.h",
        "uvectr32.h",
        "ucurrimp.h",
        "ucase.h",
        "uposixdefs.h",
        "capi_helper.h",
        "ustr_imp.h",
        "utracimp.h",
        "uset_imp.h",
        "norm2_nfc_data.h",
        "uenumimp.h",
        "uvectr64.h",
        "utrie2_impl.h",
        "resource.h",
        "udataswp.h",
        "usc_impl.h",
        "uprops.h",
        "static_unicode_sets.h",
        "cstring.h",
        "locmap.h",
        "mutex.h",
        "ucnv_cnv.h",
        "utrie.h",
        "uchar_props_data.h",
        "norm2allmodes.h",
        "uresimp.h",
        "ubidi_props_data.h",
        "ucln_imp.h",
        "ubidi_props.h",
        "util.h",
        "rbbi_cache.h",
        "uassert.h",
        "umapfile.h",
        "ulayout_props.h",
        "localsvc.h",
        "hash.h",
        "ulist.h",
        "umutex.h",
        "restrace.h",
        "ucasemap_imp.h",
        "ulocimp.h",
        "ucptrie_impl.h",
        "putilimp.h",
        "icuplugimp.h",
        "ucmndata.h",
        "udatamem.h",
        "rbbitblb.h",
        "rbbidata.h",
        "lstmbe.h",
        "uhash.h",
        "ucase_props_data.h",
        "ubidiimp.h",
        "sharedobject.h",
        "charstrmap.h",
        "ucnv_io.h",
        "ucol_data.h",
        "ucnv_bld.h",
        "ucln_cmn.h",
        "brkeng.h",
        "ureslocs.h",
        "unistrappender.h",
        "uelement.h",
        "charstr.h",
        "cmemory.h",
        "punycode.h",
        "ustrfmt.h",
        "servloc.h",
        "ucln.h",
        "locbased.h",
        "rbbiscan.h",
        "pluralmap.h",
        "mlbe.h",
        "propsvec.h",
        "ucnv_ext.h",
        "msvcres.h",
        "localeprioritylist.h",
        "normalizer2impl.h",
        "ruleiter.h",
        "localefallback_data.h",
        "bmpset.h",
        "ucnvmbcs.h",
        "rbbirb.h",
        "ucnv_imp.h",
        "patternprops.h",
        "loclikelysubtags.h",
        "utrie2.h",
        "messageimpl.h",
        "propname_data.h",
        "propname.h",
        "ucol_swp.h",
        "bytesinkutil.h",
        "uvector.h",
        "uresdata.h",
        "ustrenum.h"
    ],
    copts = [
        "-DU_COMMON_IMPLEMENTATION",
        "-Iicu4c/source/common",
        "-Iicu4c/source/i18n",
    ],
    deps = [
        "//icu4c/source/stubdata:stubdata",
        ":common_headers",
    ],
)
