load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "i18n",
    srcs = [
        "//:icu4c/source/i18n/alphaindex.cpp",
        "//:icu4c/source/i18n/anytrans.cpp",
        "//:icu4c/source/i18n/astro.cpp",
        "//:icu4c/source/i18n/basictz.cpp",
        "//:icu4c/source/i18n/bocsu.cpp",
        "//:icu4c/source/i18n/brktrans.cpp",
        "//:icu4c/source/i18n/buddhcal.cpp",
        "//:icu4c/source/i18n/calendar.cpp",
        "//:icu4c/source/i18n/casetrn.cpp",
        "//:icu4c/source/i18n/cecal.cpp",
        "//:icu4c/source/i18n/chnsecal.cpp",
        "//:icu4c/source/i18n/choicfmt.cpp",
        "//:icu4c/source/i18n/coleitr.cpp",
        "//:icu4c/source/i18n/coll.cpp",
        "//:icu4c/source/i18n/collation.cpp",
        "//:icu4c/source/i18n/collationbuilder.cpp",
        "//:icu4c/source/i18n/collationcompare.cpp",
        "//:icu4c/source/i18n/collationdata.cpp",
        "//:icu4c/source/i18n/collationdatabuilder.cpp",
        "//:icu4c/source/i18n/collationdatareader.cpp",
        "//:icu4c/source/i18n/collationdatawriter.cpp",
        "//:icu4c/source/i18n/collationfastlatin.cpp",
        "//:icu4c/source/i18n/collationfastlatinbuilder.cpp",
        "//:icu4c/source/i18n/collationfcd.cpp",
        "//:icu4c/source/i18n/collationiterator.cpp",
        "//:icu4c/source/i18n/collationkeys.cpp",
        "//:icu4c/source/i18n/collationroot.cpp",
        "//:icu4c/source/i18n/collationrootelements.cpp",
        "//:icu4c/source/i18n/collationruleparser.cpp",
        "//:icu4c/source/i18n/collationsets.cpp",
        "//:icu4c/source/i18n/collationsettings.cpp",
        "//:icu4c/source/i18n/collationtailoring.cpp",
        "//:icu4c/source/i18n/collationweights.cpp",
        "//:icu4c/source/i18n/compactdecimalformat.cpp",
        "//:icu4c/source/i18n/coptccal.cpp",
        "//:icu4c/source/i18n/cpdtrans.cpp",
        "//:icu4c/source/i18n/csdetect.cpp",
        "//:icu4c/source/i18n/csmatch.cpp",
        "//:icu4c/source/i18n/csr2022.cpp",
        "//:icu4c/source/i18n/csrecog.cpp",
        "//:icu4c/source/i18n/csrmbcs.cpp",
        "//:icu4c/source/i18n/csrsbcs.cpp",
        "//:icu4c/source/i18n/csrucode.cpp",
        "//:icu4c/source/i18n/csrutf8.cpp",
        "//:icu4c/source/i18n/curramt.cpp",
        "//:icu4c/source/i18n/currfmt.cpp",
        "//:icu4c/source/i18n/currpinf.cpp",
        "//:icu4c/source/i18n/currunit.cpp",
        "//:icu4c/source/i18n/dangical.cpp",
        "//:icu4c/source/i18n/datefmt.cpp",
        "//:icu4c/source/i18n/dayperiodrules.cpp",
        "//:icu4c/source/i18n/dcfmtsym.cpp",
        "//:icu4c/source/i18n/decContext.cpp",
        "//:icu4c/source/i18n/decNumber.cpp",
        "//:icu4c/source/i18n/decimfmt.cpp",
        "//:icu4c/source/i18n/displayoptions.cpp",
        "//:icu4c/source/i18n/double-conversion-bignum-dtoa.cpp",
        "//:icu4c/source/i18n/double-conversion-bignum.cpp",
        "//:icu4c/source/i18n/double-conversion-cached-powers.cpp",
        "//:icu4c/source/i18n/double-conversion-double-to-string.cpp",
        "//:icu4c/source/i18n/double-conversion-fast-dtoa.cpp",
        "//:icu4c/source/i18n/double-conversion-string-to-double.cpp",
        "//:icu4c/source/i18n/double-conversion-strtod.cpp",
        "//:icu4c/source/i18n/dtfmtsym.cpp",
        "//:icu4c/source/i18n/dtitvfmt.cpp",
        "//:icu4c/source/i18n/dtitvinf.cpp",
        "//:icu4c/source/i18n/dtptngen.cpp",
        "//:icu4c/source/i18n/dtrule.cpp",
        "//:icu4c/source/i18n/erarules.cpp",
        "//:icu4c/source/i18n/esctrn.cpp",
        "//:icu4c/source/i18n/ethpccal.cpp",
        "//:icu4c/source/i18n/fmtable.cpp",
        "//:icu4c/source/i18n/fmtable_cnv.cpp",
        "//:icu4c/source/i18n/format.cpp",
        "//:icu4c/source/i18n/formatted_string_builder.cpp",
        "//:icu4c/source/i18n/formattedval_iterimpl.cpp",
        "//:icu4c/source/i18n/formattedval_sbimpl.cpp",
        "//:icu4c/source/i18n/formattedvalue.cpp",
        "//:icu4c/source/i18n/fphdlimp.cpp",
        "//:icu4c/source/i18n/fpositer.cpp",
        "//:icu4c/source/i18n/funcrepl.cpp",
        "//:icu4c/source/i18n/gender.cpp",
        "//:icu4c/source/i18n/gregocal.cpp",
        "//:icu4c/source/i18n/gregoimp.cpp",
        "//:icu4c/source/i18n/hebrwcal.cpp",
        "//:icu4c/source/i18n/indiancal.cpp",
        "//:icu4c/source/i18n/inputext.cpp",
        "//:icu4c/source/i18n/islamcal.cpp",
        "//:icu4c/source/i18n/iso8601cal.cpp",
        "//:icu4c/source/i18n/japancal.cpp",
        "//:icu4c/source/i18n/listformatter.cpp",
        "//:icu4c/source/i18n/measfmt.cpp",
        "//:icu4c/source/i18n/measunit.cpp",
        "//:icu4c/source/i18n/measunit_extra.cpp",
        "//:icu4c/source/i18n/measure.cpp",
        "//:icu4c/source/i18n/msgfmt.cpp",
        "//:icu4c/source/i18n/messageformat2.cpp",
        "//:icu4c/source/i18n/messageformat2_arguments.cpp",
        "//:icu4c/source/i18n/messageformat2_checker.cpp",
        "//:icu4c/source/i18n/messageformat2_data_model.cpp",
        "//:icu4c/source/i18n/messageformat2_errors.cpp",
        "//:icu4c/source/i18n/messageformat2_evaluation.cpp",
        "//:icu4c/source/i18n/messageformat2_formatter.cpp",
        "//:icu4c/source/i18n/messageformat2_formattable.cpp",
        "//:icu4c/source/i18n/messageformat2_function_registry.cpp",
        "//:icu4c/source/i18n/messageformat2_parser.cpp",
        "//:icu4c/source/i18n/messageformat2_serializer.cpp",
        "//:icu4c/source/i18n/name2uni.cpp",
        "//:icu4c/source/i18n/nfrs.cpp",
        "//:icu4c/source/i18n/nfrule.cpp",
        "//:icu4c/source/i18n/nfsubs.cpp",
        "//:icu4c/source/i18n/nortrans.cpp",
        "//:icu4c/source/i18n/nultrans.cpp",
        "//:icu4c/source/i18n/number_affixutils.cpp",
        "//:icu4c/source/i18n/number_asformat.cpp",
        "//:icu4c/source/i18n/number_capi.cpp",
        "//:icu4c/source/i18n/number_compact.cpp",
        "//:icu4c/source/i18n/number_currencysymbols.cpp",
        "//:icu4c/source/i18n/number_decimalquantity.cpp",
        "//:icu4c/source/i18n/number_decimfmtprops.cpp",
        "//:icu4c/source/i18n/number_fluent.cpp",
        "//:icu4c/source/i18n/number_formatimpl.cpp",
        "//:icu4c/source/i18n/number_grouping.cpp",
        "//:icu4c/source/i18n/number_integerwidth.cpp",
        "//:icu4c/source/i18n/number_longnames.cpp",
        "//:icu4c/source/i18n/number_mapper.cpp",
        "//:icu4c/source/i18n/number_modifiers.cpp",
        "//:icu4c/source/i18n/number_multiplier.cpp",
        "//:icu4c/source/i18n/number_notation.cpp",
        "//:icu4c/source/i18n/number_output.cpp",
        "//:icu4c/source/i18n/number_padding.cpp",
        "//:icu4c/source/i18n/number_patternmodifier.cpp",
        "//:icu4c/source/i18n/number_patternstring.cpp",
        "//:icu4c/source/i18n/number_rounding.cpp",
        "//:icu4c/source/i18n/number_scientific.cpp",
        "//:icu4c/source/i18n/number_simple.cpp",
        "//:icu4c/source/i18n/number_skeletons.cpp",
        "//:icu4c/source/i18n/number_symbolswrapper.cpp",
        "//:icu4c/source/i18n/number_usageprefs.cpp",
        "//:icu4c/source/i18n/number_utils.cpp",
        "//:icu4c/source/i18n/numfmt.cpp",
        "//:icu4c/source/i18n/numparse_affixes.cpp",
        "//:icu4c/source/i18n/numparse_compositions.cpp",
        "//:icu4c/source/i18n/numparse_currency.cpp",
        "//:icu4c/source/i18n/numparse_decimal.cpp",
        "//:icu4c/source/i18n/numparse_impl.cpp",
        "//:icu4c/source/i18n/numparse_parsednumber.cpp",
        "//:icu4c/source/i18n/numparse_scientific.cpp",
        "//:icu4c/source/i18n/numparse_symbols.cpp",
        "//:icu4c/source/i18n/numparse_validators.cpp",
        "//:icu4c/source/i18n/numrange_capi.cpp",
        "//:icu4c/source/i18n/numrange_fluent.cpp",
        "//:icu4c/source/i18n/numrange_impl.cpp",
        "//:icu4c/source/i18n/numsys.cpp",
        "//:icu4c/source/i18n/olsontz.cpp",
        "//:icu4c/source/i18n/persncal.cpp",
        "//:icu4c/source/i18n/pluralranges.cpp",
        "//:icu4c/source/i18n/plurfmt.cpp",
        "//:icu4c/source/i18n/plurrule.cpp",
        "//:icu4c/source/i18n/quant.cpp",
        "//:icu4c/source/i18n/quantityformatter.cpp",
        "//:icu4c/source/i18n/rbnf.cpp",
        "//:icu4c/source/i18n/rbt.cpp",
        "//:icu4c/source/i18n/rbt_data.cpp",
        "//:icu4c/source/i18n/rbt_pars.cpp",
        "//:icu4c/source/i18n/rbt_rule.cpp",
        "//:icu4c/source/i18n/rbt_set.cpp",
        "//:icu4c/source/i18n/rbtz.cpp",
        "//:icu4c/source/i18n/regexcmp.cpp",
        "//:icu4c/source/i18n/regeximp.cpp",
        "//:icu4c/source/i18n/regexst.cpp",
        "//:icu4c/source/i18n/regextxt.cpp",
        "//:icu4c/source/i18n/region.cpp",
        "//:icu4c/source/i18n/reldatefmt.cpp",
        "//:icu4c/source/i18n/reldtfmt.cpp",
        "//:icu4c/source/i18n/rematch.cpp",
        "//:icu4c/source/i18n/remtrans.cpp",
        "//:icu4c/source/i18n/repattrn.cpp",
        "//:icu4c/source/i18n/rulebasedcollator.cpp",
        "//:icu4c/source/i18n/scientificnumberformatter.cpp",
        "//:icu4c/source/i18n/scriptset.cpp",
        "//:icu4c/source/i18n/search.cpp",
        "//:icu4c/source/i18n/selfmt.cpp",
        "//:icu4c/source/i18n/sharedbreakiterator.cpp",
        "//:icu4c/source/i18n/simpletz.cpp",
        "//:icu4c/source/i18n/smpdtfmt.cpp",
        "//:icu4c/source/i18n/smpdtfst.cpp",
        "//:icu4c/source/i18n/sortkey.cpp",
        "//:icu4c/source/i18n/standardplural.cpp",
        "//:icu4c/source/i18n/string_segment.cpp",
        "//:icu4c/source/i18n/strmatch.cpp",
        "//:icu4c/source/i18n/strrepl.cpp",
        "//:icu4c/source/i18n/stsearch.cpp",
        "//:icu4c/source/i18n/taiwncal.cpp",
        "//:icu4c/source/i18n/timezone.cpp",
        "//:icu4c/source/i18n/titletrn.cpp",
        "//:icu4c/source/i18n/tmunit.cpp",
        "//:icu4c/source/i18n/tmutamt.cpp",
        "//:icu4c/source/i18n/tmutfmt.cpp",
        "//:icu4c/source/i18n/tolowtrn.cpp",
        "//:icu4c/source/i18n/toupptrn.cpp",
        "//:icu4c/source/i18n/translit.cpp",
        "//:icu4c/source/i18n/transreg.cpp",
        "//:icu4c/source/i18n/tridpars.cpp",
        "//:icu4c/source/i18n/tzfmt.cpp",
        "//:icu4c/source/i18n/tzgnames.cpp",
        "//:icu4c/source/i18n/tznames.cpp",
        "//:icu4c/source/i18n/tznames_impl.cpp",
        "//:icu4c/source/i18n/tzrule.cpp",
        "//:icu4c/source/i18n/tztrans.cpp",
        "//:icu4c/source/i18n/ucal.cpp",
        "//:icu4c/source/i18n/ucln_in.cpp",
        "//:icu4c/source/i18n/ucol.cpp",
        "//:icu4c/source/i18n/ucol_res.cpp",
        "//:icu4c/source/i18n/ucol_sit.cpp",
        "//:icu4c/source/i18n/ucoleitr.cpp",
        "//:icu4c/source/i18n/ucsdet.cpp",
        "//:icu4c/source/i18n/udat.cpp",
        "//:icu4c/source/i18n/udateintervalformat.cpp",
        "//:icu4c/source/i18n/udatpg.cpp",
        "//:icu4c/source/i18n/ufieldpositer.cpp",
        "//:icu4c/source/i18n/uitercollationiterator.cpp",
        "//:icu4c/source/i18n/ulistformatter.cpp",
        "//:icu4c/source/i18n/ulocdata.cpp",
        "//:icu4c/source/i18n/umsg.cpp",
        "//:icu4c/source/i18n/unesctrn.cpp",
        "//:icu4c/source/i18n/uni2name.cpp",
        "//:icu4c/source/i18n/units_data.cpp",
        "//:icu4c/source/i18n/units_complexconverter.cpp",
        "//:icu4c/source/i18n/units_converter.cpp",
        "//:icu4c/source/i18n/units_router.cpp",
        "//:icu4c/source/i18n/unum.cpp",
        "//:icu4c/source/i18n/unumsys.cpp",
        "//:icu4c/source/i18n/upluralrules.cpp",
        "//:icu4c/source/i18n/uregex.cpp",
        "//:icu4c/source/i18n/uregexc.cpp",
        "//:icu4c/source/i18n/uregion.cpp",
        "//:icu4c/source/i18n/usearch.cpp",
        "//:icu4c/source/i18n/uspoof.cpp",
        "//:icu4c/source/i18n/uspoof_build.cpp",
        "//:icu4c/source/i18n/uspoof_conf.cpp",
        "//:icu4c/source/i18n/uspoof_impl.cpp",
        "//:icu4c/source/i18n/utf16collationiterator.cpp",
        "//:icu4c/source/i18n/utf8collationiterator.cpp",
        "//:icu4c/source/i18n/utmscale.cpp",
        "//:icu4c/source/i18n/utrans.cpp",
        "//:icu4c/source/i18n/vtzone.cpp",
        "//:icu4c/source/i18n/vzone.cpp",
        "//:icu4c/source/i18n/windtfmt.cpp",
        "//:icu4c/source/i18n/winnmfmt.cpp",
        "//:icu4c/source/i18n/wintzimpl.cpp",
        "//:icu4c/source/i18n/zonemeta.cpp",
        "//:icu4c/source/i18n/zrule.cpp",
        "//:icu4c/source/i18n/ztrans.cpp"
    ],
    hdrs = [
        "//:icu4c/source/i18n/unicode/tblcoll.h",
        "//:icu4c/source/i18n/unicode/compactdecimalformat.h",
        "//:icu4c/source/i18n/unicode/dtrule.h",
        "//:icu4c/source/i18n/unicode/unumberformatter.h",
        "//:icu4c/source/i18n/unicode/curramt.h",
        "//:icu4c/source/i18n/unicode/plurfmt.h",
        "//:icu4c/source/i18n/unicode/ucsdet.h",
        "//:icu4c/source/i18n/unicode/umsg.h",
        "//:icu4c/source/i18n/unicode/numfmt.h",
        "//:icu4c/source/i18n/unicode/reldatefmt.h",
        "//:icu4c/source/i18n/unicode/formattednumber.h",
        "//:icu4c/source/i18n/unicode/formattedvalue.h",
        "//:icu4c/source/i18n/unicode/measure.h",
        "//:icu4c/source/i18n/unicode/uformattable.h",
        "//:icu4c/source/i18n/unicode/vtzone.h",
        "//:icu4c/source/i18n/unicode/rbnf.h",
        "//:icu4c/source/i18n/unicode/uspoof.h",
        "//:icu4c/source/i18n/unicode/unirepl.h",
        "//:icu4c/source/i18n/unicode/datefmt.h",
        "//:icu4c/source/i18n/unicode/basictz.h",
        "//:icu4c/source/i18n/unicode/coll.h",
        "//:icu4c/source/i18n/unicode/messageformat2_arguments.h",
        "//:icu4c/source/i18n/unicode/nounit.h",
        "//:icu4c/source/i18n/unicode/displayoptions.h",
        "//:icu4c/source/i18n/unicode/format.h",
        "//:icu4c/source/i18n/unicode/dtitvfmt.h",
        "//:icu4c/source/i18n/unicode/uformattednumber.h",
        "//:icu4c/source/i18n/unicode/udatpg.h",
        "//:icu4c/source/i18n/unicode/smpdtfmt.h",
        "//:icu4c/source/i18n/unicode/messageformat2_data_model_names.h",
        "//:icu4c/source/i18n/unicode/tztrans.h",
        "//:icu4c/source/i18n/unicode/simpletz.h",
        "//:icu4c/source/i18n/unicode/unumberrangeformatter.h",
        "//:icu4c/source/i18n/unicode/ucoleitr.h",
        "//:icu4c/source/i18n/unicode/tmunit.h",
        "//:icu4c/source/i18n/unicode/unum.h",
        "//:icu4c/source/i18n/unicode/usimplenumberformatter.h",
        "//:icu4c/source/i18n/unicode/ulocdata.h",
        "//:icu4c/source/i18n/unicode/choicfmt.h",
        "//:icu4c/source/i18n/unicode/selfmt.h",
        "//:icu4c/source/i18n/unicode/dtfmtsym.h",
        "//:icu4c/source/i18n/unicode/uregex.h",
        "//:icu4c/source/i18n/unicode/tznames.h",
        "//:icu4c/source/i18n/unicode/alphaindex.h",
        "//:icu4c/source/i18n/unicode/currpinf.h",
        "//:icu4c/source/i18n/unicode/dcfmtsym.h",
        "//:icu4c/source/i18n/unicode/numberformatter.h",
        "//:icu4c/source/i18n/unicode/ufieldpositer.h",
        "//:icu4c/source/i18n/unicode/calendar.h",
        "//:icu4c/source/i18n/unicode/ucal.h",
        "//:icu4c/source/i18n/unicode/tmutfmt.h",
        "//:icu4c/source/i18n/unicode/udat.h",
        "//:icu4c/source/i18n/unicode/messageformat2_data_model.h",
        "//:icu4c/source/i18n/unicode/udateintervalformat.h",
        "//:icu4c/source/i18n/unicode/listformatter.h",
        "//:icu4c/source/i18n/unicode/usearch.h",
        "//:icu4c/source/i18n/unicode/translit.h",
        "//:icu4c/source/i18n/unicode/messageformat2_function_registry.h",
        "//:icu4c/source/i18n/unicode/numsys.h",
        "//:icu4c/source/i18n/unicode/ugender.h",
        "//:icu4c/source/i18n/unicode/sortkey.h",
        "//:icu4c/source/i18n/unicode/ucol.h",
        "//:icu4c/source/i18n/unicode/unumberoptions.h",
        "//:icu4c/source/i18n/unicode/currunit.h",
        "//:icu4c/source/i18n/unicode/tmutamt.h",
        "//:icu4c/source/i18n/unicode/ulistformatter.h",
        "//:icu4c/source/i18n/unicode/ureldatefmt.h",
        "//:icu4c/source/i18n/unicode/coleitr.h",
        "//:icu4c/source/i18n/unicode/uformattedvalue.h",
        "//:icu4c/source/i18n/unicode/gregocal.h",
        "//:icu4c/source/i18n/unicode/gender.h",
        "//:icu4c/source/i18n/unicode/stsearch.h",
        "//:icu4c/source/i18n/unicode/decimfmt.h",
        "//:icu4c/source/i18n/unicode/search.h",
        "//:icu4c/source/i18n/unicode/measunit.h",
        "//:icu4c/source/i18n/unicode/numberrangeformatter.h",
        "//:icu4c/source/i18n/unicode/upluralrules.h",
        "//:icu4c/source/i18n/unicode/fpositer.h",
        "//:icu4c/source/i18n/unicode/tzfmt.h",
        "//:icu4c/source/i18n/unicode/unumsys.h",
        "//:icu4c/source/i18n/unicode/dtitvinf.h",
        "//:icu4c/source/i18n/unicode/measfmt.h",
        "//:icu4c/source/i18n/unicode/dtptngen.h",
        "//:icu4c/source/i18n/unicode/timezone.h",
        "//:icu4c/source/i18n/unicode/region.h",
        "//:icu4c/source/i18n/unicode/utmscale.h",
        "//:icu4c/source/i18n/unicode/plurrule.h",
        "//:icu4c/source/i18n/unicode/messageformat2_formattable.h",
        "//:icu4c/source/i18n/unicode/regex.h",
        "//:icu4c/source/i18n/unicode/msgfmt.h",
        "//:icu4c/source/i18n/unicode/utrans.h",
        "//:icu4c/source/i18n/unicode/scientificnumberformatter.h",
        "//:icu4c/source/i18n/unicode/udisplayoptions.h",
        "//:icu4c/source/i18n/unicode/fieldpos.h",
        "//:icu4c/source/i18n/unicode/uregion.h",
        "//:icu4c/source/i18n/unicode/rbtz.h",
        "//:icu4c/source/i18n/unicode/simplenumberformatter.h",
        "//:icu4c/source/i18n/unicode/fmtable.h",
        "//:icu4c/source/i18n/unicode/messageformat2.h",
        "//:icu4c/source/i18n/unicode/tzrule.h",
        "//:icu4c/source/i18n/windtfmt.h",
        "//:icu4c/source/i18n/double-conversion-diy-fp.h",
        "//:icu4c/source/i18n/rbt.h",
        "//:icu4c/source/i18n/collationcompare.h",
        "//:icu4c/source/i18n/collationrootelements.h",
        "//:icu4c/source/i18n/rbt_pars.h",
        "//:icu4c/source/i18n/numparse_validators.h",
        "//:icu4c/source/i18n/uitercollationiterator.h",
        "//:icu4c/source/i18n/transreg.h",
        "//:icu4c/source/i18n/toupptrn.h",
        "//:icu4c/source/i18n/numparse_currency.h",
        "//:icu4c/source/i18n/collationdatabuilder.h",
        "//:icu4c/source/i18n/measunit_impl.h",
        "//:icu4c/source/i18n/regexcmp.h",
        "//:icu4c/source/i18n/number_mapper.h",
        "//:icu4c/source/i18n/erarules.h",
        "//:icu4c/source/i18n/number_microprops.h",
        "//:icu4c/source/i18n/decNumber.h",
        "//:icu4c/source/i18n/uspoof_conf.h",
        "//:icu4c/source/i18n/plurrule_impl.h",
        "//:icu4c/source/i18n/remtrans.h",
        "//:icu4c/source/i18n/double-conversion-double-to-string.h",
        "//:icu4c/source/i18n/casetrn.h",
        "//:icu4c/source/i18n/wintzimpl.h",
        "//:icu4c/source/i18n/tzgnames.h",
        "//:icu4c/source/i18n/dayperiodrules.h",
        "//:icu4c/source/i18n/double-conversion-fast-dtoa.h",
        "//:icu4c/source/i18n/formattedval_impl.h",
        "//:icu4c/source/i18n/decNumberLocal.h",
        "//:icu4c/source/i18n/collationdata.h",
        "//:icu4c/source/i18n/msgfmt_impl.h",
        "//:icu4c/source/i18n/number_formatimpl.h",
        "//:icu4c/source/i18n/name2uni.h",
        "//:icu4c/source/i18n/number_decimalquantity.h",
        "//:icu4c/source/i18n/messageformat2_macros.h",
        "//:icu4c/source/i18n/number_asformat.h",
        "//:icu4c/source/i18n/number_affixutils.h",
        "//:icu4c/source/i18n/collationweights.h",
        "//:icu4c/source/i18n/gregoimp.h",
        "//:icu4c/source/i18n/double-conversion-bignum.h",
        "//:icu4c/source/i18n/units_complexconverter.h",
        "//:icu4c/source/i18n/unesctrn.h",
        "//:icu4c/source/i18n/double-conversion-bignum-dtoa.h",
        "//:icu4c/source/i18n/numrange_impl.h",
        "//:icu4c/source/i18n/persncal.h",
        "//:icu4c/source/i18n/csmatch.h",
        "//:icu4c/source/i18n/csrecog.h",
        "//:icu4c/source/i18n/collationtailoring.h",
        "//:icu4c/source/i18n/nortrans.h",
        "//:icu4c/source/i18n/numsys_impl.h",
        "//:icu4c/source/i18n/numparse_decimal.h",
        "//:icu4c/source/i18n/numparse_affixes.h",
        "//:icu4c/source/i18n/olsontz.h",
        "//:icu4c/source/i18n/scriptset.h",
        "//:icu4c/source/i18n/number_multiplier.h",
        "//:icu4c/source/i18n/number_scientific.h",
        "//:icu4c/source/i18n/numparse_impl.h",
        "//:icu4c/source/i18n/number_skeletons.h",
        "//:icu4c/source/i18n/csrucode.h",
        "//:icu4c/source/i18n/sharedbreakiterator.h",
        "//:icu4c/source/i18n/buddhcal.h",
        "//:icu4c/source/i18n/sharedpluralrules.h",
        "//:icu4c/source/i18n/nultrans.h",
        "//:icu4c/source/i18n/japancal.h",
        "//:icu4c/source/i18n/dangical.h",
        "//:icu4c/source/i18n/units_converter.h",
        "//:icu4c/source/i18n/ucln_in.h",
        "//:icu4c/source/i18n/collationfastlatinbuilder.h",
        "//:icu4c/source/i18n/collationkeys.h",
        "//:icu4c/source/i18n/double-conversion-strtod.h",
        "//:icu4c/source/i18n/collationsets.h",
        "//:icu4c/source/i18n/numparse_utils.h",
        "//:icu4c/source/i18n/double-conversion-cached-powers.h",
        "//:icu4c/source/i18n/selfmtimpl.h",
        "//:icu4c/source/i18n/collationbuilder.h",
        "//:icu4c/source/i18n/rbt_rule.h",
        "//:icu4c/source/i18n/number_patternstring.h",
        "//:icu4c/source/i18n/region_impl.h",
        "//:icu4c/source/i18n/collationruleparser.h",
        "//:icu4c/source/i18n/number_modifiers.h",
        "//:icu4c/source/i18n/usrchimp.h",
        "//:icu4c/source/i18n/inputext.h",
        "//:icu4c/source/i18n/iso8601cal.h",
        "//:icu4c/source/i18n/collationdatareader.h",
        "//:icu4c/source/i18n/dt_impl.h",
        "//:icu4c/source/i18n/number_patternmodifier.h",
        "//:icu4c/source/i18n/messageformat2_serializer.h",
        "//:icu4c/source/i18n/number_utils.h",
        "//:icu4c/source/i18n/number_types.h",
        "//:icu4c/source/i18n/strrepl.h",
        "//:icu4c/source/i18n/currfmt.h",
        "//:icu4c/source/i18n/brktrans.h",
        "//:icu4c/source/i18n/collationroot.h",
        "//:icu4c/source/i18n/rbt_set.h",
        "//:icu4c/source/i18n/tolowtrn.h",
        "//:icu4c/source/i18n/rbt_data.h",
        "//:icu4c/source/i18n/numparse_types.h",
        "//:icu4c/source/i18n/csrutf8.h",
        "//:icu4c/source/i18n/numparse_compositions.h",
        "//:icu4c/source/i18n/esctrn.h",
        "//:icu4c/source/i18n/regextxt.h",
        "//:icu4c/source/i18n/islamcal.h",
        "//:icu4c/source/i18n/quantityformatter.h",
        "//:icu4c/source/i18n/winnmfmt.h",
        "//:icu4c/source/i18n/double-conversion.h",
        "//:icu4c/source/i18n/bocsu.h",
        "//:icu4c/source/i18n/coptccal.h",
        "//:icu4c/source/i18n/number_usageprefs.h",
        "//:icu4c/source/i18n/collationdatawriter.h",
        "//:icu4c/source/i18n/smpdtfst.h",
        "//:icu4c/source/i18n/number_roundingutils.h",
        "//:icu4c/source/i18n/double-conversion-ieee.h",
        "//:icu4c/source/i18n/vzone.h",
        "//:icu4c/source/i18n/titletrn.h",
        "//:icu4c/source/i18n/uni2name.h",
        "//:icu4c/source/i18n/tznames_impl.h",
        "//:icu4c/source/i18n/collunsafe.h",
        "//:icu4c/source/i18n/funcrepl.h",
        "//:icu4c/source/i18n/number_longnames.h",
        "//:icu4c/source/i18n/csrmbcs.h",
        "//:icu4c/source/i18n/string_segment.h",
        "//:icu4c/source/i18n/collationiterator.h",
        "//:icu4c/source/i18n/messageformat2_function_registry_internal.h",
        "//:icu4c/source/i18n/standardplural.h",
        "//:icu4c/source/i18n/csrsbcs.h",
        "//:icu4c/source/i18n/double-conversion-utils.h",
        "//:icu4c/source/i18n/regexst.h",
        "//:icu4c/source/i18n/decContext.h",
        "//:icu4c/source/i18n/double-conversion-string-to-double.h",
        "//:icu4c/source/i18n/ethpccal.h",
        "//:icu4c/source/i18n/nfrlist.h",
        "//:icu4c/source/i18n/collation.h",
        "//:icu4c/source/i18n/uspoof_impl.h",
        "//:icu4c/source/i18n/number_currencysymbols.h",
        "//:icu4c/source/i18n/umsg_imp.h",
        "//:icu4c/source/i18n/ztrans.h",
        "//:icu4c/source/i18n/dtitv_impl.h",
        "//:icu4c/source/i18n/units_data.h",
        "//:icu4c/source/i18n/collationsettings.h",
        "//:icu4c/source/i18n/shareddateformatsymbols.h",
        "//:icu4c/source/i18n/collationfcd.h",
        "//:icu4c/source/i18n/nfsubs.h",
        "//:icu4c/source/i18n/messageformat2_checker.h",
        "//:icu4c/source/i18n/fphdlimp.h",
        "//:icu4c/source/i18n/formatted_string_builder.h",
        "//:icu4c/source/i18n/numparse_symbols.h",
        "//:icu4c/source/i18n/messageformat2_allocation.h",
        "//:icu4c/source/i18n/chnsecal.h",
        "//:icu4c/source/i18n/anytrans.h",
        "//:icu4c/source/i18n/tridpars.h",
        "//:icu4c/source/i18n/utf16collationiterator.h",
        "//:icu4c/source/i18n/number_decnum.h",
        "//:icu4c/source/i18n/regexcst.h",
        "//:icu4c/source/i18n/fmtableimp.h",
        "//:icu4c/source/i18n/number_compact.h",
        "//:icu4c/source/i18n/zonemeta.h",
        "//:icu4c/source/i18n/cpdtrans.h",
        "//:icu4c/source/i18n/ucol_imp.h",
        "//:icu4c/source/i18n/messageformat2_errors.h",
        "//:icu4c/source/i18n/cecal.h",
        "//:icu4c/source/i18n/astro.h",
        "//:icu4c/source/i18n/number_decimfmtprops.h",
        "//:icu4c/source/i18n/quant.h",
        "//:icu4c/source/i18n/csdetect.h",
        "//:icu4c/source/i18n/dtptngen_impl.h",
        "//:icu4c/source/i18n/taiwncal.h",
        "//:icu4c/source/i18n/number_utypes.h",
        "//:icu4c/source/i18n/collationfastlatin.h",
        "//:icu4c/source/i18n/pluralranges.h",
        "//:icu4c/source/i18n/hebrwcal.h",
        "//:icu4c/source/i18n/indiancal.h",
        "//:icu4c/source/i18n/sharedcalendar.h",
        "//:icu4c/source/i18n/regeximp.h",
        "//:icu4c/source/i18n/csr2022.h",
        "//:icu4c/source/i18n/strmatch.h",
        "//:icu4c/source/i18n/messageformat2_evaluation.h",
        "//:icu4c/source/i18n/units_router.h",
        "//:icu4c/source/i18n/sharednumberformat.h",
        "//:icu4c/source/i18n/nfrule.h",
        "//:icu4c/source/i18n/messageformat2_parser.h",
        "//:icu4c/source/i18n/nfrs.h",
        "//:icu4c/source/i18n/numparse_scientific.h",
        "//:icu4c/source/i18n/zrule.h",
        "//:icu4c/source/i18n/utf8collationiterator.h",
        "//:icu4c/source/i18n/reldtfmt.h"
    ],
    copts = [
        "-DU_I18N_IMPLEMENTATION",
        "-Iicu4c/source/common",
        "-Iicu4c/source/i18n",
    ],
    deps = [
        "//bazel/icu4c/source/common:common",
    ],
)
